--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+.idea/vcs.xml
+.idea/git_toolbox_prj.xml
 ### Eclipse ###
 .apt_generated
 .classpath
