--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea/vcs.xml
-.idea/git_toolbox_prj.xml
+
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -28,3 +27,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+.idea/
+*.iml
